.k8s/apps/router9.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: router9
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: router9
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: b0bbea69b8539e8bbc73bbf915af9a70649935af
    kubenix/module-instance: router9
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: router9
  namespace: apps
spec:
  replicas: 0
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: router9
      app.kubernetes.io/name: router9
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: router9
        app.kubernetes.io/name: router9
    spec:
      automountServiceAccountToken: true
      containers:
        - envFrom:
            - secretRef:
                name: router9-env
          image: ghcr.io/josevictorferreira/9router:5f8956f
          imagePullPolicy: IfNotPresent
          name: main
          ports:
            - containerPort: 20128
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: data
            - mountPath: /app/data-home
              name: data-home
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      imagePullSecrets:
        - name: ghcr-registry-secret
      serviceAccountName: default
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: router9-data
        - name: data-home
          persistentVolumeClaim:
            claimName: router9-data-home
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.147
    lbipam.cilium.io/sharing-key: router9
  labels:
    app.kubernetes.io/instance: router9
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: router9
    app.kubernetes.io/service: router9
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: b0bbea69b8539e8bbc73bbf915af9a70649935af
    kubenix/module-instance: router9
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: router9
  namespace: apps
spec:
  ports:
    - name: http
      port: 20128
      protocol: TCP
      targetPort: 20128
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: router9
    app.kubernetes.io/name: router9
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: router9
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: router9
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: b0bbea69b8539e8bbc73bbf915af9a70649935af
    kubenix/module-instance: router9
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: router9
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: router9.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: router9
                port:
                  number: 20128
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - router9.josevictor.me
      secretName: wildcard-tls
